Fixed missing last letter

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
     <div id="content">
         <h1>Type something that you want Raph to hear</h1>
-        <input type="text" placeholder="Message Here" id="input" onkeypress="UpdateDisplay()">
+        <input type="text" placeholder="Message Here" id="input" onkeyup="UpdateDisplay()">
         <br>
         <br>
         <image src="https://cdn.discordapp.com/avatars/138398980185784320/5ad1550eac0f8737a22221861cd2c785.webp?size=256"></image>
